TileTable: various improvements & bugfixing
- ensure runtime property changes don't cause exceptions
- harmonize padding
- update the tileAccordion's scrollbars when layouting
- fix scoutJs insertTiles bug (don't destroy reused tiles)
- improve shift-selecting behaviour on the table-tile-grid with removing
text selection from tiles.
- increase default gridColumnCount for tile table

Reviewed-on: https://git.eclipse.org/r/154191
Tested-by: CI Bot

--- a/eclipse-scout-core/src/table/Table.less
+++ b/eclipse-scout-core/src/table/Table.less
@@ -103,7 +103,7 @@
   }
 
   & > .tile-accordion {
-    padding-top: 10px;
+    padding-top: 20px;
     padding-left: 20px;
     padding-right: 15px;
 
@@ -115,6 +115,10 @@
   & > .tile-table-header {
     padding-left: 20px;
     padding-right: 20px;
+
+    & > .group-box-body {
+      padding-bottom: 6px;
+    }
   }
 }
 
